# actions-playground

./: Cargo.toml  README.md  github.query
.github/actions/curl-action/: action.yml
.github/actions/debug/: action.yml
.github/actions/setup-msys2/: index.js
.github/actions/toolchain/: action.yml  actions.py  main.py
.github/workflow/: checkout-beta.yml
.github/workflows/: android.yml  build-docs.yml  checkout-beta.yml  clippy.yml  composite-test.yml  continue-on-error.yml  crates.yml  curl.yml  debug.yml  debug.yml.disabled  fail-on-nightly.yml  gh-pages.yml.disabled  graphql.yml  grcov.yml.disabled  install-action.yml  jq.yml  macos.yml  macos.yml.disabled  matrix.yml.disabled  modio.yml  modio.yml.disabled  problem-matchers.yml  setup-rust-action.yml  strip-bin.yml  yamlcpp.yml.disabled
actions/toolchain/: action.yml
src/: lib.rs  main.rs
