[package]
name = "actions-playground"
version = "0.1.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jq-rs = { version = "0.4", features = ["bundled"] }
